Initial add for weather page

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -36,6 +36,7 @@
             </li> -->
             <li><a href='/food/schedule'>View Food Schedule</a></li>
             <li><a href='http://192.168.86.38:8000'>Backyard Cam</a></li>
+            <li><a href='/weather'>Weather Outlook</a></li>
             <li><a href='/api/bedtime'>Bedtime!</a></li>
         </ul>
     </nav>
