Added front door light, added weather temps w api

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -133,6 +133,11 @@
                 <input id='diningroomSwitch' type="checkbox">
                 <span class="slider round"></span>
             </label>
+            <label id="frontdoorLabel" class="crossedOutLabel">Front Door</label>
+            <label class="switch">
+                <input id='frontdoorSwitch' type="checkbox">
+                <span class="slider round"></span>
+            </label>
             <label id="garageLabel" class="crossedOutLabel">Garage</label>
             <label class="switch">
                 <input id='garageSwitch' type="checkbox">
