--- a/app/templates/weather_forecast.html
+++ b/app/templates/weather_forecast.html
@@ -37,7 +37,21 @@
         </ul>
     </nav>
     <main>
-        <p>Hello</p>
+        <section id="day1Container" class="container dailyContainer">
+            
+        </section>
+        <section id="day2Container" class="container dailyContainer">
+            
+        </section>
+        <section id="day3Container" class="container dailyContainer">
+            
+        </section>
+        <section id="day4Container" class="container dailyContainer">
+            
+        </section>
+        <section id="day5Container" class="container dailyContainer">
+            
+        </section>
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module" src="{{ url_for('static', filename='js/weather_forecast.js') }}"></script>
