--- a/app/static/css/weather_forecast.css
+++ b/app/static/css/weather_forecast.css
@@ -75,3 +75,26 @@ main input {
     box-sizing: border-box;
     text-align: center;
   }
+
+  main {
+    display: flex;
+    flex-flow: row wrap;
+}
+/* Each container in the main */
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 20px;    
+  background-color: aqua;
+  border-radius: 30px;
+}
+
+.dailyContainer {
+    height: 500px;
+    width: 300px;
+    align-items: center;
+}
