--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -95,7 +95,7 @@ width: 300px;
 align-items: center;
 } */
 
-#lightingContainer {
+/* #lightingContainer {
   height: 600px;
   width: 300px;
   align-items: center;
@@ -108,11 +108,19 @@ align-items: center;
 
 #landscapeDelaySetTime {
   display: none;
+} */
+#allLightsContainer {
+  display: flex;
+  flex-direction: row;
 }
-
+.lightingContainer {
+  width: 120px;
+  align-items: center;
+  text-align: center;
+}
 #smartThingsContainer {
-  height: 650px;
-  width: 300px;
+  height: 420px;
+  width: 420px;
   align-items: center;
 }
 
