--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -3,11 +3,11 @@
 <head>
 	<title>Kiowa Dashboard</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/icons/favicon.ico') }}"/>	
+    <!-- <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/icons/favicon.ico') }}"/>	 -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dashboard.css') }}">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="20">
+    <!-- <meta http-equiv="refresh" content="20"> -->
     <script>
         const data = JSON.parse('{{ data | tojson | safe}}');
     </script>
@@ -123,46 +123,53 @@
         </section> -->
         <section id="smartThingsContainer" class="container">
             <h1>Kiowa Lighting Status</h1>
-            <label id="pineappleLabel" class="crossedOutLabel">Pineapple</label>
-            <label class="switch">
-                <input id='pineappleSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
-            <label id="diningroomLabel" class="crossedOutLabel">Dining Room</label>
-            <label class="switch">
-                <input id='diningroomSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
-            <label id="frontdoorLabel" class="crossedOutLabel">Front Door</label>
-            <label class="switch">
-                <input id='frontdoorSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
-            <label id="garageLabel" class="crossedOutLabel">Garage</label>
-            <label class="switch">
-                <input id='garageSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
-            <label id="bedroomLabel" class="crossedOutLabel">Bedroom</label>
-            <label class="switch">
-                <input id='bedroomSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
-            <label id="lanternLabel" class="crossedOutLabel">Lantern</label>
-            <label class="switch">
-                <input id='lanternSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
-            <label id="stringlightsLabel" class="crossedOutLabel">String Lights</label>
-            <label class="switch">
-                <input id='stringlightsSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
-            <label id="landscapelightsLabel" class="crossedOutLabel">Landscape Lights</label>
-            <label class="switch">
-                <input id='landscapeLightSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
+            <section id="allLightsContainer">
+                <section class="container lightingContainer">
+                    <label id="pineappleLabel" class="crossedOutLabel">Pineapple</label>
+                    <label class="switch">
+                        <input id='pineappleSwitch' type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <label id="diningroomLabel" class="crossedOutLabel">Dining Room</label>
+                    <label class="switch">
+                        <input id='diningroomSwitch' type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <label id="frontdoorLabel" class="crossedOutLabel">Front Door</label>
+                    <label class="switch">
+                        <input id='frontdoorSwitch' type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <label id="bedroomLabel" class="crossedOutLabel">Bedroom</label>
+                    <label class="switch">
+                        <input id='bedroomSwitch' type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </section>
+                <section class="container lightingContainer">
+                    <label id="garageLabel" class="crossedOutLabel">Garage</label>
+                    <label class="switch">
+                        <input id='garageSwitch' type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <label id="lanternLabel" class="crossedOutLabel">Lantern</label>
+                    <label class="switch">
+                        <input id='lanternSwitch' type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <label id="stringlightsLabel" class="crossedOutLabel">String Lights</label>
+                    <label class="switch">
+                        <input id='stringlightsSwitch' type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <label id="landscapelightsLabel" class="crossedOutLabel">Landscape Lights</label>
+                    <label class="switch">
+                        <input id='landscapeLightSwitch' type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </section>
+            </section>
+            
         </section>
         <section id="bedtimeContainer" class="container">
             <h1>Bedtime Data</h1>
