--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Kiowa Dashboard</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <!-- <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/icons/favicon.ico') }}"/>	 -->
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/icons/favicon.ico') }}"/>	
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dashboard.css') }}">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -101,26 +101,6 @@
             <p>Outside Temp: {{data.outside_temp}}*F</p>
             <p>Living Room Humidity: {{data.humidity}}%</p>
         </section>
-        <!-- <section id="usageContainer" class="container">
-            <h1>Thermostat Use</h1>
-            <p class='winter'>Heat Time Today: {{data.heat_time}} minutes</p>
-            <p class='summer'>Cool Time Today: {{data.cool_time}} minutes</p>
-        </section> -->
-        <!-- <section id="lightingContainer" class="container">
-            <h1>Landscape Lighting Status</h1>
-            <p id="landscapeState">Landscape Lighting: {{data.landscape_state}}</p>
-            <p>At time: {{data.last_landscape_change}}</p>
-            <p id="landscapeDelaySetTime">Delay Set Time: No Data</p>
-            <div id="landscapeDelaySelector">
-                <p>Set new delay (minutes): </p>
-                <input id="delayDateTime"></input>
-                
-            </div>
-            <label class="switch">
-                <input id='landscapeLightSwitch' type="checkbox">
-                <span class="slider round"></span>
-            </label>
-        </section> -->
         <section id="smartThingsContainer" class="container">
             <h1>Kiowa Lighting Status</h1>
             <section id="allLightsContainer">
