changed title of lantern to xmas tree

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -132,7 +132,7 @@
                         <input id='garageSwitch' type="checkbox">
                         <span class="slider round"></span>
                     </label>
-                    <label id="lanternLabel" class="crossedOutLabel">Lantern</label>
+                    <label id="lanternLabel" class="crossedOutLabel">Christmas Tree</label>
                     <label class="switch">
                         <input id='lanternSwitch' type="checkbox">
                         <span class="slider round"></span>
