--- a/app/templates/weekly_food.html
+++ b/app/templates/weekly_food.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<title>Kiowa Food Planner</title>
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='legacy_static/images/icons/favicon.ico') }}"/>	
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='legacy_static/css/weekly_food.css') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/icons/favicon.ico') }}"/>	
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='static/css/weekly_food.css') }}">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
@@ -59,5 +59,5 @@
             </form>
         </section>
     </main>
-    <script type="module" src="{{ url_for('static', filename='legacy_static/js/weekly_food.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='static/js/weekly_food.js') }}"></script>
 </body>
